--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@mui/material-nextjs": "^6.1.9",
     "axios": "^1.7.9",
     "next": "15.0.3",
+    "notistack": "^3.0.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "zustand": "^5.0.2"
