--- a/android_app/pubspec.yaml
+++ b/android_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
   flutter_local_notifications: ^18.0.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
