--- a/android_app/pubspec.yaml
+++ b/android_app/pubspec.yaml
@@ -12,6 +12,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: 0.19.0
+  flutter_riverpod: ^2.6.1
+  hooks_riverpod: ^2.6.1
+  shared_preferences: ^2.5.2
+  go_router: ^14.8.1
+  dio: ^5.8.0+1
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
