--- a/android_app/pubspec.yaml
+++ b/android_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   go_router: ^14.8.1
   dio: ^5.8.0+1
   flutter_secure_storage: ^9.2.4
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +27,8 @@ dev_dependencies:
 flutter:
   generate: true # ✅ Увімкнення генерації локалізацій
   uses-material-design: true
+  assets:
+    - .env
 flutter_intl:
   enabled: true
   class_name: AppLocalizations
