--- a/android_app/pubspec.yaml
+++ b/android_app/pubspec.yaml
@@ -29,6 +29,7 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - lib/images/
 flutter_intl:
   enabled: true
   class_name: AppLocalizations
