--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -10,7 +10,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.115.2"
-uvicorn = "^0.32.0"
+uvicorn = {extras = ["standard"], version = "^0.34.0"}
 loguru = "^0.7.2"
 python-dotenv = "^1.0.1"
 pydantic = {extras = ["email"], version = "^2.9.2"}
