--- a/android_app/android/app/src/main/AndroidManifest.xml
+++ b/android_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"  
         android:label="android_app"
         android:name="${applicationName}"
