--- a/admin-v2/package.json
+++ b/admin-v2/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-toastify": "^11.0.5",
     "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
